--- a/ProjectX/WebContent/templates/refurbishment.html
+++ b/ProjectX/WebContent/templates/refurbishment.html
@@ -1,18 +1,18 @@
 
-<div class="container" style="background-color:Magenta;">
+<div class="container" style="background-color:Orange;">
 <div class="form-group col-sm-4 col-xs-12" 
 	>
       
     
   <label for="sel1">Select list:</label>
-  <select class="form-control" id="sel1" ng-model="building.city" ng-init="building.city='0'">
+  <select class="form-control" id="sel1" ng-model="refurbishment.city" ng-init="refurbishment.city='0'">
   
     <option value="0">Välj stad</option>
     <option value="Gavle">Gävle</option>
     <option value="Stockholm">Stockholm</option>
     <option>4</option>
   </select>
-  {{building.city}}
+  {{refurbishment.city}}
   <div class="form-group">
   <label for="sel1">Select list:</label>
   <select class="form-control" id="sel1">
@@ -42,5 +42,5 @@
     <option>4</option>
   </select>
   </div>
-  <div class="col-sm-2 col-sm-offset-10 col-xs-6 col-xs-offset-6"><button  type="button" class="btn btn-default col-xs-12 "><a href="#refurbishment" data-toggle="tab">Kör</a></button></div>
+  <div class="col-sm-2 col-sm-offset-10 col-xs-6 col-xs-offset-6"><button type="button" class="btn btn-default col-xs-12 ">Kör</button></div>
 </div>
