--- a/ProjectX/WebContent/templates/result.html
+++ b/ProjectX/WebContent/templates/result.html
@@ -1,11 +1,11 @@
 
-<div class="container" style="background-color:Orange;">
+<div class="container" style="background-color:Cyan;">
 <div class="form-group col-sm-4 col-xs-12" 
 	>
       
     
   <label for="sel1">Select list:</label>
-  <select class="form-control" id="sel1" ng-model="refurbishment.city" ng-init="refurbishment.city='0'">
+  <select class="form-control" id="sel1" ng-model="result.city" ng-init="result.city='0'">
   
     <option value="0">Välj stad</option>
     <option value="Gavle">Gävle</option>
