--- a/ProjectX/WebContent/templates/refurbishment.html
+++ b/ProjectX/WebContent/templates/refurbishment.html
@@ -1,5 +1,6 @@
 
-<div class="container" style="background-color:Orange;">
+<div class="panel panel-default" style="background-color:GoldenRod;">
+<div class="panel-body" >
 <div class="form-group col-sm-4 col-xs-12" 
 	>
       
@@ -43,4 +44,5 @@
   </select>
   </div>
   <div class="col-sm-2 col-sm-offset-10 col-xs-6 col-xs-offset-6"><button type="button" class="btn btn-default col-xs-12 ">Kör</button></div>
+</div>
 </div>
