--- a/ProjectX/WebContent/templates/result.html
+++ b/ProjectX/WebContent/templates/result.html
@@ -37,7 +37,7 @@
  <div class="form-group col-sm-4 col-xs-12">
 <label for="sel1">Select list:</label>
 <select class="form-control" id="sel1">
-    <option>Välj årtal</option>
+    <option>Välj årtl</option>
     <option>2</option>
     <option>3</option>
     <option>4</option>
