--- a/ProjectX/WebContent/templates/building.html
+++ b/ProjectX/WebContent/templates/building.html
@@ -1,7 +1,7 @@
 
 <div class="panel panel-default" style="background-color:Coral;">
 <div class="panel-body" >
-<div class="form-group col-sm-4 col-xs-12" >
+<div class="form-group col-lg-3 col-sm-6 col-xs-12" >
       
     
   <label for="sel1">Ort:</label>
@@ -12,8 +12,8 @@
     <option value="Stockholm">Stockholm</option>
   
   </select>
-  {{building.city}}
-  <div class="form-group">
+  </div>
+  <div class="form-group col-lg-3 col-sm-6 col-xs-12">
   <label for="sel2">Byggår:</label>
   <select class="form-control" id="sel2" ng-model="building.year" ng-init="building.year='0'">
     <option value="0">Välj årtal</option>
@@ -23,8 +23,8 @@
   </select>
 </div>
 
-</div>
-<div class="form-group col-sm-4 col-xs-12">
+
+<div class="form-group col-lg-3 col-sm-6 col-xs-12">
 <label for="sel3">Byggnadstyp:</label>
 <select class="form-control" id="sel3" ng-model="building.type" ng-init="building.type='0'">
     <option value="0">Välj byggnadstyp</option>
@@ -34,7 +34,7 @@
   </select>
 </div>
 <label for="sel4">Uppvärmd yta:</label>
- <div class="input-group col-sm-4 col-xs-12">
+ <div class="input-group col-lg-3 col-sm-6 col-xs-12">
 <input type="number" class="form-control" id="sel4" ng-model="building.heatedarea" placeholder="Välj uppvärmd yta:">
 
   </input>
