--- a/ProjectX/WebContent/templates/building.html
+++ b/ProjectX/WebContent/templates/building.html
@@ -1,5 +1,5 @@
 
-<div class="panel panel-default" style="background-color:Coral;">
+<div class="panel panel-default" style="background-color:rgb(38,156,156);">
 <div class="panel-body" >
 <div class="form-group col-lg-3 col-sm-6 col-xs-12" >
       
@@ -7,16 +7,16 @@
   <label for="sel1">Ort:</label>
   <select class="form-control" id="sel1" ng-model="building.city" ng-init="building.city='0'">
   
-    <option value="0">V‰lj stad</option>
-    <option value="Gavle">G‰vle</option>
+    <option value="0">V√§lj stad</option>
+    <option value="Gavle">G√§vle</option>
     <option value="Stockholm">Stockholm</option>
   
   </select>
   </div>
   <div class="form-group col-lg-3 col-sm-6 col-xs-12">
-  <label for="sel2">ByggÂr:</label>
+  <label for="sel2">Bygg√•r:</label>
   <select class="form-control" id="sel2" ng-model="building.year" ng-init="building.year='0'">
-    <option value="0">V‰lj Ârtal</option>
+    <option value="0">V√§lj √•rtal</option>
     <option value="-1920">-1920</option>
     <option value="1921-1940">1921-1940</option>
    
@@ -27,15 +27,15 @@
 <div class="form-group col-lg-3 col-sm-6 col-xs-12">
 <label for="sel3">Byggnadstyp:</label>
 <select class="form-control" id="sel3" ng-model="building.type" ng-init="building.type='0'">
-    <option value="0">V‰lj byggnadstyp</option>
+    <option value="0">V√§lj byggnadstyp</option>
     <option value="home">Bostad</option>
     <option value="place">Lokal</option>
   
   </select>
 </div>
-<label for="sel4">Uppv‰rmd yta:</label>
+<label for="sel4">Uppv√§rmd yta:</label>
  <div class="input-group col-lg-3 col-sm-6 col-xs-12">
-<input type="number" class="form-control" id="sel4" ng-model="building.heatedarea" placeholder="V‰lj uppv‰rmd yta:">
+<input type="number" class="form-control" id="sel4" ng-model="building.heatedarea" placeholder="V√§lj uppv√§rmd yta:">
 
   </input>
   <span class="input-group-addon" >m<sup>2</sup></span>
