--- a/ProjectX/WebContent/templates/result.html
+++ b/ProjectX/WebContent/templates/result.html
@@ -1,5 +1,5 @@
 
-<div class="panel panel-default" style="background-color:YellowGreen;">
+<div class="panel panel-default" style="background-color:rgb(128,128,0);">
 <div class='panel-body'>
 <div class="form-group col-sm-4 col-xs-12" 
 	>
@@ -15,8 +15,8 @@
   </select>
   {{refurbishment.city}}
   <div class="form-group">
-  <label for="sel1">Select list:</label>
-  <select class="form-control" id="sel1">
+  <label for="sel2">Select list:</label>
+  <select class="form-control" id="sel2">
     <option>Välj årtal</option>
     <option>2</option>
     <option>3</option>
@@ -26,8 +26,8 @@
 
 </div>
 <div class="form-group col-sm-4 col-xs-12">
-<label for="sel1">Select list:</label>
-<select class="form-control" id="sel1">
+<label for="sel3">Select list:</label>
+<select class="form-control" id="sel3">
     <option>Välj årtal</option>
     <option>2</option>
     <option>3</option>
@@ -35,9 +35,9 @@
   </select>
 </div>
  <div class="form-group col-sm-4 col-xs-12">
-<label for="sel1">Select list:</label>
-<select class="form-control" id="sel1">
-    <option>Välj årtl</option>
+<label for="sel4">Select list:</label>
+<select class="form-control" id="sel4">
+    <option>Välj årtal</option>
     <option>2</option>
     <option>3</option>
     <option>4</option>
