--- a/ProjectX/WebContent/templates/building.html
+++ b/ProjectX/WebContent/templates/building.html
@@ -1,31 +1,64 @@
-
-<div class="panel panel-default" style="background-color:rgb(38,156,156);">
-<div class="panel-body" >
-<div class="form-group col-lg-4 col-sm-6 col-xs-12" >
-  <label for="sel1">Ort:</label>
-  <select class="form-control" id="sel1" ng-model="building.city" ng-init="building.city='0'">
-    <option value="0">Välj stad</option>
-    <option ng-repeat="city in data.cities">{{ city }}</option>
-  </select>
- </div>
- 
-  <div class="form-group col-lg-4 col-sm-6 col-xs-12">
-  <label for="sel2">Byggår:</label>
-  <select class="form-control" id="sel2" ng-model="building.year" ng-init="building.year='0'">
-    <option value="0">Välj årtal</option>
-    <option ng-repeat="yearspan in data.yearspan">{{ yearspan }}</option>
-  </select>
-</div>
-
-
-<label for="sel3">Uppvärmd yta:</label>
- <div class="input-group col-lg-4 col-sm-6 col-xs-12">
-<input type="number" class="form-control" id="sel3" ng-model="building.heatedarea" placeholder="Välj uppvärmd yta:">
-
-  </input>
-  <span class="input-group-addon" >m<sup>2</sup></span>
-  </div>
-  
-  <div class="col-sm-2 col-sm-offset-10 col-xs-6 col-xs-offset-6"><button  type="button" class="btn btn-default col-xs-12 "><a href="#refurbishment" data-toggle="tab">Kör</a></button></div>
-</div>
+<div class="panel panel-default" >
+	<div class="panel-body col-xs-12" style="background-color: rgb(38, 156, 156);">
+	<div class="row col-xs-12">
+		<div class="col-lg-3 col-sm-6 col-xs-12">
+			<div class="form-group ">
+				<label for="sel1">Ort:</label> <select class="form-control"
+					id="sel1" ng-model="building.city" ng-init="building.city='0'">
+					<option value="0">Välj stad</option>
+					<option ng-repeat="city in data.cities">{{ city }}</option>
+				</select>
+			</div>
+		</div>
+		<div class="col-lg-3 col-sm-6 col-xs-12">
+			<div class="form-group">
+				<label for="sel2">Byggår:</label> <select class="form-control"
+					id="sel2" ng-model="building.year" ng-init="building.year='0'">
+					<option value="0">Välj årtal</option>
+					<option ng-repeat="yearspan in data.yearspan">{{ yearspan }}</option>
+				</select>
+			</div>
+		</div>
+		<div class="col-lg-3 col-sm-6 col-xs-12">
+			<label for="sel3">Uppvärmd yta:</label>
+			<div class="input-group">
+				<input type="number" class="form-control" id="sel3"
+					ng-model="building.heatedarea" placeholder="Välj uppvärmd yta:"></input>
+				<span class="input-group-addon">m<sup>2</sup></span>
+			</div>
+		</div>
+		<div class="col-lg-3 col-sm-6 col-xs-12">
+			<label for="sel4">Antal våningar:</label>
+			<div class="input-group">
+				<input type="number" class="form-control" id="sel4"
+					ng-model="building.levels" ng-init="building.levels"></input> 
+					<span class="input-group-addon">st</span>
+			</div>
+		</div>
+		</div>
+		<div class="row col-xs-12">
+		<div class="col-lg-2 col-sm-6 col-xs-12 label label-primary">
+			<span>Omkrets : {{ building.circum() }} m</span>
+		</div>
+		<div class="col-lg-2 col-sm-6 col-xs-12 label label-primary">
+			<span>Fönsterarea : {{ building.heatedarea * 0.1 }} m<sup>2</sup></span>
+		</div>
+		<div class="col-lg-2 col-sm-6 col-xs-12 label label-primary">
+			<span>Dörryta : {{ building.heatedarea * 0.025 }} m<sup>2</sup></span>
+		</div>
+		<div class="col-lg-2 col-sm-6 col-xs-12 label label-primary">
+			<span>Fasadarea : {{ (2*(11.5 + (building.heatedarea / building.levels) / 11.5)+2) * 2.8 * building.levels - building.heatedarea * 0.1 - building.heatedarea * 0.025 }} m<sup>2</sup></span>
+		</div>
+		<div class="col-lg-2 col-sm-6 col-xs-12 label label-primary">
+			<span>Vindsbjälklagarea: {{ building.heatedarea / building.levels }} m<sup>2</sup></span>
+		</div>
+		<div class="col-lg-2 col-sm-6 col-xs-12 label label-primary">
+			<span>Bottenbjälklagarea: {{ building.heatedarea / building.levels }} m<sup>2</sup></span>
+		</div>
+		</div>
+		
+		
+		
+		
+	</div>
 </div>
